# TMB

./: .gitattributes  .gitignore  AIDE.md  ARCHITECTURE.md  CONTRIBUTING.md  DEMO_TASKS.md  LICENSE  README.md  baymax_history.db-shm  baymax_history.db-wal  get-bro.sh  install  main.py  pyproject.toml  test-docker.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
aide/: __init__.py  config.py  engine.py  permissions.py  state.py  store.py
aide/mcp/: client.py  generator.py  server.py
aide/nodes/: architect.py  discussion.py  executor.py  gatekeeper.py  planner.py  validator.py
aide/tools/: __init__.py  filesystem.py  search.py  shell.py  skills.py
baymax/: __init__.py  cli.py  config.py  engine.py  paths.py  permissions.py  state.py  store.py
baymax/mcp/: client.py  generator.py  server.py
baymax/nodes/: discussion.py  executor.py  gatekeeper.py  planner.py  validator.py
baymax/tools/: __init__.py  filesystem.py  search.py  shell.py  skills.py
config/: mcp.default.yaml  mcp.yaml  nodes.default.yaml  nodes.yaml  project.default.yaml  project.yaml
doc/: GOALS.md
prompts/: architect.md  executor.md  planner.md  validator.md
prompts/samples/: README.md
prompts/samples/ab-testing/: executor.md  planner.md
prompts/samples/data-analytics/: executor.md  planner.md
prompts/samples/data-pipeline/: executor.md  planner.md
prompts/samples/it-company/: executor.md  planner.md  validator.md
prompts/samples/software-engineering/: planner.md
prompts/samples/sql-analytics/: executor.md  planner.md
prompts/system/: README.md  chat.md  executor.md  planner.md
skills/: blueprint-issue-2.md  blueprint-issue-3.md  branch-operations.md  csv-pandas-matching.md  db-operations.md  file-access.md  gender-preference-matching.md  json-from-csv-column.md  jupyter-notebook-creation.md  mcp-patterns.md  pool-matching-algorithm.md  project-paths-yikyak.md  validate-v2-gender-checks.md  validation-script-pattern.md
tests/: conftest.py  test_chat_mode.py  test_claude_code_provider.py  test_cli_setup.py  test_config.py  test_discussion.py  test_escalation.py  test_exclude.py  test_gatekeeper.py  test_git.py  test_helpers.py  test_integration.py  test_integration_extended.py  test_monitor.py  test_ollama_live.py  test_permissions.py  test_planner_classify.py  test_setup_bugs.py  test_shell_safety.py  test_store.py  test_store_extended.py  test_upgrade.py  test_ux.py  test_verdict.py  test_xml_parsing.py
tmb/: __init__.py  cli.py  config.py  engine.py  git.py  monitor.py  paths.py  permissions.py  scanner.py  state.py  store.py  types.py  utils.py  ux.py
tmb/mcp/: __init__.py  client.py  generator.py  server.py
tmb/nodes/: discussion.py  executor.py  gatekeeper.py  planner.py
tmb/providers/: claude_code.py
tmb/tools/: __init__.py  filesystem.py  search.py  shell.py  skills.py  web_search.py
