[project]
name = "baymax"
version = "0.1.0"
description = "Multi-agent workflow engine for industrial-grade software projects: Project Owner → Planner → Executor → Validator."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langchain-mcp-adapters>=0.2.1",
    "pandas>=3.0.1",
    "tavily-python>=0.7.23",
    "ddgs>=9.11.2",
]

[project.optional-dependencies]
google  = ["langchain-google-genai>=4.0"]
groq    = ["langchain-groq>=0.3"]
mistral = ["langchain-mistralai>=1.0"]
deepseek = ["langchain-deepseek>=0.1"]
ollama  = ["langchain-ollama>=0.3"]
all     = ["baymax[google,groq,mistral,deepseek,ollama]"]

[project.scripts]
baymax = "baymax.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
