[project]
name = "trustmybot"
version = "0.4.0"
description = "Multi-agent workflow engine for industrial-grade software projects: Project Owner → Planner → Executor → Validator."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.13"
dependencies = [
    "langgraph>=0.4",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "langchain-mcp-adapters>=0.2.1",
    "pandas>=3.0.1",
    "tavily-python>=0.7.23",
    "ddgs>=9.11.2",
]

[project.optional-dependencies]
google  = ["langchain-google-genai>=4.0"]
groq    = ["langchain-groq>=0.3"]
mistral = ["langchain-mistralai>=1.0"]
deepseek = ["langchain-deepseek>=0.1"]
ollama  = ["langchain-ollama>=0.3"]
all     = ["trustmybot[google,groq,mistral,deepseek,ollama]"]
dev     = ["pytest>=8.0", "pytest-cov>=5.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
bot = "tmb.cli:main"
bro = "tmb.cli:main"
tmb = "tmb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tmb"]

[tool.hatch.build.targets.wheel.force-include]
"prompts" = "tmb/_data/prompts"
"config" = "tmb/_data/config"
"skills" = "tmb/_data/skills"
